2024-02-16T16:18:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7933298949 # 122
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-16
* notice: last 14d: unq all: 1 13
* notice: prev accum: outdated-unq outdated-all / unq all: 867 1584 / 875 1599
* notice: next accum: outdated-unq outdated-all / unq all: 868 1586 / 875 1599
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-02] / []

2024-02-15T16:18:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7918988647 # 119
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-15
* notice: last 14d: unq all: 1 15
* notice: prev accum: outdated-unq outdated-all / unq all: 866 1582 / 875 1599
* notice: next accum: outdated-unq outdated-all / unq all: 867 1584 / 875 1599
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-01] / []

2024-02-14T16:18:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7904181304 # 116
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-14
* notice: last 14d: unq all: 1 17
* notice: prev accum: outdated-unq outdated-all / unq all: 865 1580 / 875 1599
* notice: next accum: outdated-unq outdated-all / unq all: 866 1582 / 875 1599
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-31] / []

2024-02-13T16:18:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7889513680 # 113