@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-16T16:18:23Z",
-  "count_outdated" : 1586,
-  "uniques_outdated" : 868,
+  "timestamp" : "2024-02-17T16:17:31Z",
+  "count_outdated" : 1588,
+  "uniques_outdated" : 869,
   "count" : 1599,
   "uniques" : 875,
   "clones" : [
-    {
-      "timestamp": "2024-02-03T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-04T00:00:00Z",
       "count": 2,
